feat: add my ratings

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="canonical" href="https://dxrating.imgg.dev" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>DXRating</title>
+    <meta name="theme-color" content="#c8a8f9" />
   </head>
   <body>
     <div id="root" vaul-drawer-wrapper=""></div>
