--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="canonical" href="https://dxrating.imgg.dev" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>DXRating</title>
     <meta name="theme-color" content="#c8a8f9" />
   </head>
