feat: add search on youtube

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -13,5 +13,12 @@
   <body>
     <div id="root" vaul-drawer-wrapper=""></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "6b42b80a653748cdb96692861c4616b1"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
   </body>
 </html>
