feat: update internalId reference, add supabase

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#c8a8f9" />
   </head>
   <body>
-    <div id="root" vaul-drawer-wrapper=""></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
