feat: add about

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="canonical" href="https://dxrating.net" />
+    <link
+      rel="prefetch"
+      href="https://shama.dxrating.net/images/version-logo/festival-plus.webp"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
