feat: remove vaul as it is still having issues

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
     />
     <title>DXRating</title>
     <meta name="theme-color" content="#c8a8f9" />
