feat: add support for zh-Hant

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="canonical" href="https://dxrating.net" />
     <link
+      rel="alternate"
+      hreflang="en"
+      href="https://dxrating.net/?locale=en"
+    />
+    <link
+      rel="alternate"
+      hreflang="ja"
+      href="https://dxrating.net/?locale=ja"
+    />
+    <link
+      rel="alternate"
+      hreflang="zh-Hans"
+      href="https://dxrating.net/?locale=zh-Hans"
+    />
+    <link
       rel="prefetch"
       href="https://shama.dxrating.net/images/version-logo/festival-plus.webp"
     />
@@ -12,6 +27,14 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
     />
     <title>DXRating</title>
+    <meta
+      name="description"
+      content="DXRating is a maimai DX Rating analyzer, along with other features like sheet details and more."
+    />
+    <meta
+      name="keywords"
+      content="maimai, maimai DX, maimai DX Rating, maimai DX Rating analyzer, gekichumai, maimaiでらっくす, 舞萌, 舞萌DX, 舞萌查分器, 舞萌算分器, maimai wiki"
+    />
     <meta name="theme-color" content="#c8a8f9" />
   </head>
   <body>
