feat: improve seo, isolate side effector

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -36,6 +36,11 @@
       content="maimai, maimai DX, maimai DX Rating, maimai DX Rating analyzer, gekichumai, maimaiでらっくす, 舞萌, 舞萌DX, 舞萌查分器, 舞萌算分器, maimai wiki"
     />
     <meta name="theme-color" content="#c8a8f9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link
+      rel="icon"
+      href="https://shama.dxrating.net/favicon/festival-plus-1024x.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
