--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -38,12 +38,43 @@
     <meta name="theme-color" content="#c8a8f9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://shama.dxrating.net/favicon/pack/v1/apple-touch-icon.png"
+    />
+    <link
       rel="icon"
-      href="https://shama.dxrating.net/favicon/festival-plus-1024x.jpg"
+      type="image/png"
+      sizes="32x32"
+      href="https://shama.dxrating.net/favicon/pack/v1/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://shama.dxrating.net/favicon/pack/v1/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="https://shama.dxrating.net/favicon/pack/v1/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="https://shama.dxrating.net/favicon/pack/v1/safari-pinned-tab.svg"
+      color="#c8a8f9"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://shama.dxrating.net/favicon/pack/v1/favicon.ico"
+    />
+    <meta name="msapplication-TileColor" content="#c8a8f9" />
+    <meta
+      name="msapplication-config"
+      content="https://shama.dxrating.net/favicon/pack/v1/browserconfig.xml"
     />
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
