--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -22,6 +22,7 @@
       rel="prefetch"
       href="https://shama.dxrating.net/images/version-logo/festival-plus.webp"
     />
+    <link rel="preconnect" href="https://derrakuma.dxrating.net" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
