feat: add traditional chinese

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -19,6 +19,11 @@
       href="https://dxrating.net/?locale=zh-Hans"
     />
     <link
+      rel="alternate"
+      hreflang="zh-Hant"
+      href="https://dxrating.net/?locale=zh-Hant"
+    />
+    <link
       rel="prefetch"
       href="https://shama.dxrating.net/images/version-logo/festival-plus.webp"
     />
