feat: use mono font

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -74,6 +74,12 @@
       name="msapplication-config"
       content="https://shama.dxrating.net/favicon/pack/v1/browserconfig.xml"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main id="root"></main>
