feat: minor update

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,30 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="canonical" href="https://dxrating.net" />
-    <link
-      rel="alternate"
-      hreflang="en"
-      href="https://dxrating.net/?locale=en"
-    />
-    <link
-      rel="alternate"
-      hreflang="ja"
-      href="https://dxrating.net/?locale=ja"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh-Hans"
-      href="https://dxrating.net/?locale=zh-Hans"
-    />
-    <link
-      rel="alternate"
-      hreflang="zh-Hant"
-      href="https://dxrating.net/?locale=zh-Hant"
-    />
-    <link
-      rel="prefetch"
-      href="https://shama.dxrating.net/images/version-logo/buddies.webp"
-    />
+    <link rel="alternate" hreflang="en" href="https://dxrating.net/?locale=en" />
+    <link rel="alternate" hreflang="ja" href="https://dxrating.net/?locale=ja" />
+    <link rel="alternate" hreflang="zh-Hans" href="https://dxrating.net/?locale=zh-Hans" />
+    <link rel="alternate" hreflang="zh-Hant" href="https://dxrating.net/?locale=zh-Hant" />
+    <link rel="prefetch" href="https://shama.dxrating.net/images/version-logo/buddies.webp" />
     <link rel="preconnect" href="https://derrakuma.dxrating.net" />
     <meta
       name="viewport"
@@ -65,10 +46,7 @@
       href="https://shama.dxrating.net/favicon/pack/v1/safari-pinned-tab.svg"
       color="#c8a8f9"
     />
-    <link
-      rel="shortcut icon"
-      href="https://shama.dxrating.net/favicon/pack/v1/favicon.ico"
-    />
+    <link rel="shortcut icon" href="https://shama.dxrating.net/favicon/pack/v1/favicon.ico" />
     <meta name="msapplication-TileColor" content="#c8a8f9" />
     <meta
       name="msapplication-config"
